unpackaged/main/default/objects/Vaccination__c/Vaccination__c.object-meta.xml
<CustomObject>
    <label>Vaccination</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Vaccination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vaccinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>