unpackaged/main/default/objects/Vaccination__c/fields/ProgramId__c.field-meta.xml
<CustomField>
    <fullName>ProgramId__c</fullName>
    <label>ProgramId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>