unpackaged/main/default/objects/Vaccination__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pfizer</fullName>
            </value>
            <value>
                <fullName>Moderna</fullName>
            </value>
            <value>
                <fullName>J&amp;J</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>