unpackaged/main/default/objects/Vaccination__c/fields/X1st_Booster_Shot_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Booster_Shot_Date__c</fullName>
    <label>1st Booster Shot Date</label>
    <type>Date</type>
</CustomField>