unpackaged/main/default/objects/Vaccination__c/fields/X1st_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Date__c</fullName>
    <label>1st Date</label>
    <type>Date</type>
</CustomField>