unpackaged/main/default/objects/Vaccination__c/fields/X2nd_Booster_Shot_Type__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Booster_Shot_Type__c</fullName>
    <label>2nd Booster Shot Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pfizer</fullName>
            </value>
            <value>
                <fullName>Moderna</fullName>
            </value>
            <value>
                <fullName>J&amp;J</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>