unpackaged/main/default/objects/Vaccination__c/fields/X3rd_Booster_Shot_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Booster_Shot_Date__c</fullName>
    <label>3rd Booster Shot Date</label>
    <type>Date</type>
</CustomField>