unpackaged/main/default/objects/Vaccination__c/recordTypes/Covid_Vaccination.recordType-meta.xml
<RecordType>
    <fullName>Covid_Vaccination</fullName>
    <active>true</active>
    <description>Default Record Type for Covid Vaccinations</description>
    <label>Covid Vaccination</label>
</RecordType>